[package]
name = "fdb_tuple"
version = "0.2.1"
authors = ["Jelle Besseling <jelle@pingiun.com>"]
description = "A crate to convert between FoundationDB Tuple Layer tuples and Rust tuples"
license = "Unlicense"
edition = "2021"

[dependencies]
seq-macro = "0.3.3"
uuid = { version = "1.3.2", optional = true }

[features]
default = []
uuid = ["dep:uuid"]

